--- a/MyScripts/view/contactosTemplate.html
+++ b/MyScripts/view/contactosTemplate.html
@@ -1,8 +1,5 @@
-<div >
-
+<div>
     <p><a data-ng-click="showadd()" href="javascript:;" class="btn btn-danger">Nuevo Recibo</a></p>
-
-    
     <div class="modal fade" id="viewModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -14,15 +11,15 @@
                     <form class="form-horizontal" role="form">
                         <div class="form-group">
                             <label for="Id" class="col-sm-3 control-label">Nombre</label>
-                             <div class="col-sm-9">
-                             {{ Contact.nombre }}
-                             </div>
+                            <div class="col-sm-9">
+                                {{ Contact.nombre}}
                             </div>
+                        </div>
                         <div class="form-group">
                             <label for="Telefono" class="col-sm-3 control-label">Telefono</label>
                             <div class="col-sm-9">
-                             {{ Contact.telefono }}
-                             </div>
+                                {{ Contact.telefono}}
+                            </div>
                         </div>
                     </form>
 
@@ -32,14 +29,14 @@
                 <div class="modal-footer">
                     <div class="col-sm-offset-3 col-sm-9">
                         <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel"
-                            />
+                               />
                         <input type="button" class="btn btn-primary" value="Submit"
-                            ng-click="submitForm()" />
+                               ng-click="submitForm()" />
                     </div>
                 </div>
             </div>
-    </div>
         </div>
+    </div>
 
     <div class="modal fade" id="regModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
@@ -68,9 +65,11 @@
                                 <td>Por concepto de: <input type="textarea" class="form-control" ng-model="recibo.concepto"></td>
                             </tr>
                             <tr>
-                                <td>Valor en letras: {{ValorEnLetras (recibo.valor)}}</td>
+                                <td>Valor en letras: 
+                                    <input type="text" class="form-control" ng-model="recibo.valor_letras" value="{{}}" disabled=""/>
+                                </td>
                             </tr>
-                             <tr>
+                            <tr>
                                 <td>Código: <input type="text" class="form-control" ng-model="recibo.codigo"></td>
                                 <td>Aprobado: <input type="text" class="form-control" ng-model="recibo.aprobado"></td>
                             </tr>
@@ -81,21 +80,21 @@
                                 <td>Nit:</td>
                             </tr>
                         </table>
-                        
+
                     </form>
                 </div>
 
                 <div class="modal-footer">
                     <div class="col-sm-offset-3 col-sm-9">
-                        
+
                         <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel" ng-click="cancel()" />
 
-                         <span data-ng-hide="editMode">
-                         <input type="submit" value="Add" data-ng-click="add()" class="btn btn-primary" />
-                         </span>
-                         <span data-ng-show="editMode">
-                         <input type="submit" value="Update" data-ng-click="update()" class="btn btn-primary" />
-                         </span>
+                        <span data-ng-hide="editMode">
+                            <input type="submit" value="Add" data-ng-click="add()" class="btn btn-primary" />
+                        </span>
+                        <span data-ng-show="editMode">
+                            <input type="submit" value="Update" data-ng-click="update()" class="btn btn-primary" />
+                        </span>
                     </div>
                 </div>
             </div>
@@ -104,33 +103,33 @@
 
     <hr />
     <div class="col-md-12">
+        <div class="form-group">
+            Filtro: <input class="form-control" type="text" ng-model="filtro"/>
+        </div>
         <div class="table-responsive">
-            <table class="table table-bordered table-hover" style="width: 800px">
+            <table class="table table-bordered table-hover">
                 <tr>
-                    <th>Id</th>
-                    <th>Nombre</th>
-                    <th>Telefono</th>
+                    <th>Número</th>
+                    <th>Pagado a</th>
+                    <th>Por concepto de</th>
+                    <th>Fecha</th>
                     <th>&nbsp;</th>
                 </tr>
-                <tr data-ng-repeat="contact in Contacts track by $index">
-                    <td>
-                        {{ contact.id }}
-                    </td>
-                    <td>
-                        {{ contact.nombre }}
-                    </td>
-                    <td>{{ contact.telefono }}</td>
+                <tr data-ng-repeat="recibo in recibos| filter:filtro track by $index">
+                    <td>{{recibo.numero}}</td>
+                    <td>{{recibo.pagado_a}}</td>
+                    <td>{{recibo.concepto}}</td>
+                    <td>{{recibo.fecha}}</td>
                     <td>
                         <p>
-                             <a data-ng-click="get(contact)" href="javascript:;">Ver</a> |
-                             <a data-ng-click="edit(contact)" href="javascript:;">Edit</a> |
-                             <a data-ng-click="showconfirm(contact)" href="javascript:;">Delete</a>
+                            <a data-ng-click="anular(recibo)" href="javascript:;">Anular</a>
+                            <!--<a data-ng-click="get(recibo)" href="javascript:;">Ver</a> |-->
+                            <!--<a data-ng-click="edit(recibo)" href="javascript:;">Edit</a> |-->
+                            <!--<a data-ng-click="showconfirm(recibo)" href="javascript:;">Delete</a>-->
                         </p>
                     </td>
                 </tr>
             </table>
-       </div>
+        </div>
     </div>
-
- 
 </div>
