Realiza get, post, put y delete correctamente dentro del mismo origen. Por ejemplo: http://localhost Si se cambia de puerto o de origen, sólo funciona el GET.

--- a/MyScripts/view/recibos.html
+++ b/MyScripts/view/recibos.html
@@ -128,7 +128,7 @@
                             <!-- <a ng-click="imprSelec('regModal')" href="javascript:;">Imprimir</a> | -->
                             <a ng-hide="recibo.estado == 'anulado'" ng-click="anular(recibo)" href="javascript:;">Anular</a>
                             <!-- <a data-ng-click="edit(recibo)" href="javascript:;">Edit</a> -->
-                            <!--<a data-ng-click="showconfirm(recibo)" href="javascript:;">Delete</a>-->
+                            <a data-ng-click="showconfirm(recibo)" href="javascript:;">Eliminar</a>
                         </p>
                     </td>
                 </tr>
